src/main/java/com/example/AntiFraudSystem/errors/AddressIpAlreadyInDataBase.java
package com.example.AntiFraudSystem.errors;

public class AddressIpAlreadyInDataBase extends RuntimeException{

    public AddressIpAlreadyInDataBase(String message) {
        super(message);
    }
}
